--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,5 +1,5 @@
 .contactcontainer {
-    width: 100vw;
+    width: auto;
     height: 100vh;
     background-image: url('../assets/c.jpg'); 
     background-size: cover; 
@@ -18,7 +18,7 @@
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat;
-    width: 100vw;
+    width: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
