--- a/src/components/facilities.css
+++ b/src/components/facilities.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:wght@400;500;700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
   .facilities-container {   
-    width: 100vw;
+    width: auto;
     height: 100vh;
     background-image: url('../assets/fbg.jpg');
     background-size: cover; 
@@ -69,7 +69,7 @@
   }
   
   .facilities-details-section {
-    width: 100vw;
+    width: auto;
     height: auto;
     background-color: white;
     display: block;
