--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  width: 100vw; /* Corrected to 100vw */
+  width: auto;
   height: 150px; 
   background-color: #8c7547;
   display: flex;
@@ -22,4 +22,3 @@
     color: white !important;
     font-family: 'Poppins', sans-serif;
   }
-  
