--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,6 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:wght@400;500;700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
+body {
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #c79b45;
+  border-radius: 10px;
+  transition: background-color 0.3s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #af8740;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+} 
+
 .homecontainer {
     width: 100%;
     height: 100vh;
@@ -32,7 +59,7 @@
 .bookingpanel {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 95vw;
     height: 110px;
     background-color: #fff;
     padding: 20px 40px;
@@ -243,7 +270,7 @@
     left: -20px;
     right: 0;
     height: 1px; /* Thickness of the line */
-    width: 740px;
+    width: 739px;
     background-color: #000000; /* Line color matching the button */
     opacity: 0.7;
     z-index: 0; /* Ensure the line is below the content */
