--- a/src/components/room.css
+++ b/src/components/room.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:wght@400;500;700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 .roomcontainer {
-  width: 100vw;
+  width: auto;
   height: 100vh;
   background-image: url('../assets/room.jpg'); 
   background-size: cover; 
