--- a/src/components/selectFacility.css
+++ b/src/components/selectFacility.css
@@ -98,19 +98,19 @@
     cursor: pointer;
   }
   
-  .book-room-select-faci {
+  .book-facility-select-faci {
     flex: 1;
     padding: 20px;
     background-color: #f9f9f9;
     overflow-y: auto;
   }
   
-  .select-text-faci {
+  .select-faci-text {
     font-family: "Raleway", sans-serif;
     font-weight: bold; 
     font-size: 35px;
     color: #b89445;
     margin: 30px 0;
     text-align: center;
-    margin-right: 1100px;
+    margin-right: 1050px;
   }
