--- a/src/components/facilities.css
+++ b/src/components/facilities.css
@@ -94,9 +94,19 @@
     margin-top: -10px;
   }
 
+  .facilities-details-section button {
+    font-size: 16px;
+    background-color: #c79b45;
+    border-radius: 32px;
+    color: white;
+    border: none;
+    height: 40px;
+    width: 110px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  }
+
   .book-here-link {
     color: #c79b45;
-    text-decoration: underline;
     cursor: pointer;
   }  
 
