--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -246,7 +246,6 @@
     cursor: pointer;
 }
 
-/* Sort buttons container */
 .sort-buttons {
   display: flex;
   justify-content: flex-end;
@@ -255,7 +254,6 @@
   margin-top: -30px;
 }
 
-/* Individual sort button styles */
 .sort-buttons button {
   padding: 8px 16px;
   font-size: 18px;
@@ -272,7 +270,6 @@
   height: 35px;
 }
 
-/* Hover effect on sort buttons */
 .sort-buttons button:hover {
   background-color: #c79b45;
   color: #fff;
@@ -367,4 +364,180 @@
 
   .booking-status.cancelled {
     color: red;
+}
+
+.my-bookings-faci {
+  background-color: white;
+  background-image: url('../assets/bookingsBG.png'); 
+  background-size: contain; 
+  background-position: top;
+  background-repeat: no-repeat; 
+  padding: 20px;
+  border-radius: 12px;
+  position: absolute;
+  top: 40px;
+  right: 0;
+  width: 500px;
+  max-height: 300px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  font-family: 'Poppins', sans-serif;
+  display: flex; /* Enable Flexbox */
+  flex-direction: column;
+}
+
+.bookingsHeaderDiv-faci{
+  background-color: transparent;
+}
+
+.bookingsBodyDiv-faci{
+  background-color: transparent;  
+  overflow-y: auto;
+  padding: 5px;
+}
+
+.my-bookings-header-faci {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.my-bookings-header-faci h2 {
+  font-weight: 500;
+  font-size: 20px;
+  color: white;
+  margin: 0;
+}
+
+.my-bookings-header-faci .back-button {
+  position: absolute; /* Anchor the button */
+  left: 0px; /* Place it on the left side */
+  color: #ffffff;
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.booking-tabs-faci {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.booking-tab-faci {
+  width: 25%;
+  padding: 10px;
+  border: none;
+  border-radius: 20px;
+  background-color: #f7f7f7;
+  font-size: 14px;
+  color: #333;
+  cursor: pointer;
+  text-align: center;
+  transition: background-color 0.3s, color 0.3s;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.booking-tab-faci.active {
+  background-color: #c79b45;
+  color: white;
+}
+
+.sort-buttons-faci {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  margin: 5px;
+  margin-top: -30px;
+}
+
+.sort-buttons-faci button {
+  padding: 8px 16px;
+  font-size: 18px;
+  font-weight: 700;
+  background-color: transparent;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s, color 0.3s;
+  width: 35px; 
+  height: 35px;
+}
+
+.sort-buttons-faci button:hover {
+  background-color: #c79b45;
+  color: #fff;
+}
+
+.booking-item-nav-faci {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Distributes space between items */
+  gap: 15px;
+  padding: 10px 15px; /* Adjusted padding for alignment */
+  height: 60px;
+  border-radius: 12px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  margin-bottom: 10px;
+  position: relative; /* For positioning children */
+}
+
+.booking-image-faci {
+  width: 70px;
+  height: 70px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.booking-info-faci {
+  flex: 1;
+  display: flex; /* Enable flexbox for the .booking-info */
+  flex-direction: column;
+}
+
+.booking-info-faci h3 {
+  margin: 0;
+  font-size: 18px;
+  color: #333;
+}
+
+.booking-info-details-faci {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 5px;
+}
+
+.booking-info-faci p {
+  margin: 0;
+  font-size: 14px;
+  color: #666;
+}
+
+.facility-status {
+  font-size: 18px;
+  font-weight: bold;
+  color: #c79b45; 
+  margin: 0;
+}
+
+.facility-status.pending {
+  color: #c79b45;
+}
+
+.facility-status.completed {
+  color: green;
+}
+
+.facility-status.cancelled {
+  color: red;
 }
